[package]
name = "libzfs-sys"
version = "0.5.7"
description = "Rust bindings to libzfs"
license = "MIT"
repository = "https://github.com/whamcloud/rust-libzfs"
authors = ["Iml Team <iml@whamcloud.com>"]
links = "zfs"
build = "build.rs"

[dependencies]
nvpair-sys = "0.1"

[build-dependencies]
bindgen = "0.43.0"
pkg-config = "0.3.14"
