[package]
name = "libzfs-sys"
version = "0.5.7"
description = "Rust bindings to libzfs"
license = "MIT"
repository = "https://github.com/whamcloud/rust-libzfs"
authors = ["Iml Team <iml@whamcloud.com>"]
links = "zfs"
build = "build.rs"

[dependencies]
nvpair-sys = { git = "https://github.com/jgrund/rust-libzfs", branch = "skip-building-on-mac" }

[build-dependencies]
bindgen = "0.43.1"
pkg-config = "0.3.14"
