[package]
name = "libzfs"
version = "0.6.11"
authors = ["IML Team <iml@whamcloud.com>"]
description = "Rust wrapper around libzfs-sys"
license = "MIT"

[dependencies]
libzfs-sys = { path = "../libzfs-sys", version = "0.5.7"}
libzfs-types = { path = "../libzfs-types", version = "0.1.0" }
nvpair-sys = { git = "https://github.com/jgrund/rust-libzfs", branch = "skip-building-on-mac" }
serde = "1.0"
serde_derive = "1.0"
foreign-types = "0.3"
cstr-argument = "0.1"
lazy_static = "1.1"
