[package]
name = "libzfs"
version = "0.6.15"
authors = ["IML Team <iml@whamcloud.com>"]
repository = "https://github.com/whamcloud/rust-libzfs"
description = "Rust wrapper around libzfs-sys"
license = "MIT"

[dependencies]
libzfs-sys = { path = "../libzfs-sys", version = "0.5.11"}
libzfs-types = { path = "../libzfs-types", version = "0.1.1" }
nvpair-sys = "0.1"
serde = "1.0"
serde_derive = "1.0"
foreign-types = "0.3"
cstr-argument = "0.1"
lazy_static = "1.4"
