[package]
name = "node-libzfs"
version = "0.1.13"
authors = ["IML Team <iml@intel.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "node_libzfs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.22"

[dependencies]
neon = "0.1.22"
neon-serde = "0.0.1"
serde = "1.0"
serde_derive = "1.0"
libzfs = "0.6.3"
