[package]
name = "node-libzfs"
version = "0.1.20"
authors = ["IML Team <iml@whamcloud.com>"]
license = "MIT"
build = "build.rs"

[lib]
name = "node_libzfs"
crate-type = ["dylib"]

[build-dependencies]
neon-build = "0.1.23"

[dependencies]
neon = "0.10.1"
neon-serde = "0.0.3"
serde = "1.0"
serde_derive = "1.0"
libzfs = "0.6.15"
